--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,16 +1,16 @@
 # Required metadata
-sonar.projectKey=petclinickey
-sonar.projectName=Simple Java project analyzed with the SonarQube Runner
+sonar.projectKey=akilaprojectkey
+sonar.projectName=Petclinic Report
 
 sonar.projectVersion=1.0
 
-sonar.organization=petclinicorg
+sonar.organization=akilapetclinicorg
 
 sonar.host.url=https://sonarcloud.io
 
 # Comma-separated paths to directories with sources (required)
 sonar.sources=src
-
+sonar.java.binaries=target/classes
 # Language
 sonar.language=java
 
