--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,18 +1,22 @@
 # Required metadata
-sonar.projectKey=akilaprojectkey
-sonar.projectName=Petclinic Report
+sonar.projectKey=springpetclinicprojectkey
+sonar.projectName=Pet clinic Code Quality Report
 
 sonar.projectVersion=1.0
 
-sonar.organization=akilapetclinicorg
+sonar.organization=springpetclinickey
 
 sonar.host.url=https://sonarcloud.io
 
 # Comma-separated paths to directories with sources (required)
 sonar.sources=src
-sonar.java.binaries=target/classes
+
 # Language
 sonar.language=java
 
 # Encoding of the source files
 sonar.sourceEncoding=UTF-8
+
+sonar.login=d3fa6a6f465488e9ea1175acacb8b7416a1ecf57
+
+sonar.java.binaries=target/classes
